--- a/src/main/resources/templates/randomEntry.html
+++ b/src/main/resources/templates/randomEntry.html
@@ -7,12 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Random number!</h1>
+    <h1 style = "margin: 10px"> Welcome to Random number!</h1>
 
-    <div style="color: black; border: 1px solid magenta; padding: 10px; margin: 20px;">
+    <div style="color: black; border: 1px solid black; padding: 10px; margin: 10px;"> <!--color is text, border is border-->
 
         <h2>How many numbers do you wish to generate?</h2>
         
+        <form method="post" data-th-action="@{/random/generated}">
+            <label style="margin: 10px">Number of Randoms</label>
+            <input type ="text" name = "numbers" placeholder="Enter 1-30">
+            <button type = "submit">Submit</button>
+        </form>
         
     </div>
   
