--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Request Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
@@ -13,10 +13,11 @@
 
         <h2>How many numbers do you wish to generate?</h2>
         
-        <form method="post" data-th-action="@{/random/generated}">
+        <form method="GET" data-th-action="@{/form/generated}">
             <label style="margin: 10px">Number of Randoms</label>
-            <input type ="text" name = "numbers" placeholder="Enter 1-30">
-            <button type = "submit">Submit</button>
+            <!-- <input type ="text" name = "numbers" placeholder="Enter 1-30"> -->
+            <input type="number" id="number" name="number" min="1" max="30" required>
+            <button type = "submit">Generate</button>
         </form>
         
     </div>
