--- a/src/main/resources/templates/trial.html
+++ b/src/main/resources/templates/trial.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Links</title>
+    <!-- <link rel="stylesheet" href="styles.css"> -->
 </head>
 <body>
     <h1>Generated Links</h1>
@@ -12,5 +13,31 @@
             <a th:href="@{/generate(number=${num})}" th:text="'Generate ' + ${num}"></a>
         </li>
     </ul>
+
+    <input type="text" id="username" />
+    <style>
+    #username {
+        background-color: yellow;
+    }
+    </style>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <!-- This column takes up 4 out of the 12 columns (1/3 of the width) -->
+                Column 1
+            </div>
+            <div class="col-4">
+                <!-- This column takes up 4 out of the 12 columns (1/3 of the width) -->
+                Column 2
+            </div>
+            <div class="col-4">
+                <!-- This column takes up 4 out of the 12 columns (1/3 of the width) -->
+                Column 3
+            </div>
+        </div>
+    </div>
+
+
 </body>
 </html>
